# dn-timer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: character.rs  config.rs  hotkey.rs  mod.rs  ocr.rs  overlay.rs  preset.rs  timer.rs  window.rs
src-tauri/src/core/: mod.rs  scheduler.rs  timer_engine.rs  timer_state.rs
src-tauri/src/models/: character.rs  config.rs  hotkey.rs  mod.rs  preset.rs
src-tauri/src/ocr/: engine.rs  mod.rs  python_bridge.rs
src-tauri/src/overlay/: manager.rs  mod.rs
src-tauri/src/platform/: hotkey.rs  mod.rs  screenshot.rs  tray.rs  window.rs
src-tauri/src/store/: mod.rs
src-tauri/src/store/migrations/: 001_init.sql
src-tauri/src/utils/: mod.rs  sound.rs  time.rs
src/components/: AlwaysOnTopButton.tsx  DockedBubble.tsx  HotkeyCaptureInput.tsx  Layout.tsx  Navbar.tsx  SimpleModeShell.tsx  TransitionOverlay.tsx
src/data/: dragonNestClasses.ts
src/pages/: Characters.tsx  Dashboard.tsx  Presets.tsx  SettingsPage.tsx
src/stores/: timerStore.ts
